# research

./: .gitignore  CLAUDE.md  LLMsched_restore.md  README.md  pins_CLAUDE.md  pyproject.toml  research_plan.md  research_progress.md
pins/: README.md  affinity.py  bridge.py  ilp.py  job_agent.py  llm_agent.py  llm_agent_cache.json  mechanism.py  negotiation_protocol.py  negotiation_server.py  negotiation_sim.py  pipeline_sim.py  placement.py  placement_affinity_sim.py  placement_sim.py  predictor.py  reflective_sim.py  results_affinity.json  results_llm_negotiation.json  results_reflective.json  results_supply_llm.json  results_two_sided.json  results_uncertainty_llm.json  run_demo.sh  supply_sim.py  test_ilp.py  test_mechanism.py  test_placement.py  two_sided_sim.py  uncertainty_sim.py
pins/eval/: benchmark.json  dag_gpu_bench.py  dag_gpu_trace_bench.py  extract_dag.py  gpu_coexec_probe.py  llm_runtime_cache.json  predict_arch.py  predict_cnn.py  predict_dag.py  predict_gpu.py  predict_resources.py  predict_runtime.py  results_arch.json  results_cnn.json  results_cnn_deterministic.json  results_cnn_deterministic_bf16.json  results_cnn_deterministic_fp16.json  results_cnn_hybrid_qwen2_5_14b.json  results_cnn_hybrid_qwen2_5_3b.json  results_cnn_hybrid_qwen2_5_7b.json  results_cnn_qwen2_5_14b.json  results_cnn_qwen2_5_7b.json  results_cnn_reason_14b.json  results_dag.json  results_dag_gpu_bench.json  results_dag_gpu_bench_mp2.json  results_dag_gpu_bench_mp4.json  results_dag_gpu_trace.json  results_dag_nocpu.json  results_gpu.json  results_gpu_coexec.json  (+4 more)
(+8 files in other folders)
