[project]
name = "mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "nvitop>=1.7.0",
    "ollama>=0.6.2",
    "pulp>=3.3.2",
    "requests>=2.34.0",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
]
